# project-template

./: pyproject.toml
.github/workflows/: lint.yml
src/project/: __main__.py
