[project]
name = 
version = 
description = 
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
repository = ""

[project.scripts]
safepull = "project.projects:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
